Small selected option button alignemnt fix

--- a/src/theme.less
+++ b/src/theme.less
@@ -17,7 +17,7 @@ htl-hatool {
                 padding-bottom: 35px;
                 background-color: #f6f6f6;
                 scroll-behavior: smooth;
-                
+
                 color: black;
         
                 text-align: left;
@@ -346,7 +346,7 @@ htl-hatool {
                 }
             }
             htl-message-options {
-                button.active.selected {
+                button.selected {
                     text-align: left;
                 }
             }
